--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,1 +1,11 @@
-dalsdadm
+pipeline {
+    agent any
+
+    stages {
+        stage('Hello') {
+            steps {
+                echo 'Hello World'
+            }
+        }
+    }
+}
